--- a/Cake.UServer/Cake.UServer.csproj
+++ b/Cake.UServer/Cake.UServer.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -42,13 +42,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server\UHttpServer.cs" />
     <Compile Include="Server\UServerSettings.cs" />
-    <Compile Include="Alias.cs" />
+    <Compile Include="UServerAlias.cs" />
     <Compile Include="Server\UFileHandler.cs" />
     <Compile Include="Server\MimeTypeMap.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Server\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
